monitoring/grafana/statefulset.yaml
apiVersion:  apps/v1
kind: StatefulSet
metadata:
  name: grafana
  labels:
    k8s-app: grafana
    app.kubernetes.io/component: grafana
spec:
  serviceName: grafana
  replicas: 1
  selector:
    matchLabels:
      k8s-app: grafana
      app.kubernetes.io/component: grafana
  template:
    metadata:
      labels:
        k8s-app: grafana
        app.kubernetes.io/component: grafana
    spec:
      # Configure an init container that will `chmod 777` Grafana's data directory
      # and volume before the main Grafana container starts up.
      # To learn more about init containers, consult https://kubernetes.io/docs/concepts/workloads/pods/init-containers/
      # from the official Kubernetes docs.
      containers:
        - name: grafana
          # The main Grafana container, which uses the `grafana/grafana:6.0.1` image
          # from https://hub.docker.com/r/grafana/grafana
          image: grafana/grafana:11.0.0
          imagePullPolicy: Always
          # Mount in all the previously defined ConfigMaps as `volumeMounts`
          # as well as the Grafana data volume
          volumeMounts:
            - name: config
              mountPath: "/etc/grafana/"
            # - name: dashboards
            #   mountPath: "/var/lib/grafana/dashboards"
            - name: datasources
              mountPath: "/etc/grafana/provisioning/datasources/"
            - name: dashboardproviders
              mountPath: "/etc/grafana/provisioning/dashboards/"
            - name: grafana
              mountPath: "/var/lib/grafana"
          ports:
            - name: grafana
              containerPort: 3000
              protocol: TCP
          # Set the `GF_SECURITY_ADMIN_USER` and `GF_SECURITY_ADMIN_PASSWORD` environment variables
          # using the Secret defined in `grafana-secret.yaml`
          livenessProbe:
            httpGet:
              path: /api/health
              port: 3000
          readinessProbe:
            httpGet:
              path: /api/health
              port: 3000
            initialDelaySeconds: 60
            timeoutSeconds: 30
            failureThreshold: 10
            periodSeconds: 10
          # Define resource limits and requests of `50m` of CPU and `100Mi` of memory.
          resources:
            limits:
              cpu: 50m
              memory: 100Mi
            requests:
              cpu: 50m
              memory: 100Mi
      # Define `configMap` volumes for the above ConfigMap files, and `volumeClaimTemplates`
      # for Grafana's `2Gi` Block Storage data volume, which will be mounted to `/var/lib/grafana`.
      volumes:
        - name: config
          configMap:
            name: grafana-ini
        - name: datasources
          configMap:
            name: grafana-datasources
        - name: dashboardproviders
          configMap:
            name: grafana-dashboardproviders
        # - name: dashboards
        #   configMap:
        #     name: dashboards
  volumeClaimTemplates:
  - metadata:
      name: grafana
      namespace: monitoring
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 2Gi
